# satisfaction-hub

./: .clangd  .gitignore  CMakeLists.txt  DEVELOPMENT_RULES.md  FONTE_ACENTOS.md  HARDWARE.md  PINS.md  README.md  SUPABASE_SETUP.md  partitions.csv  sdkconfig  sdkconfig.defaults  supabase_config.example.h
components/config/: CMakeLists.txt  priorities.h  projectConfig.h
components/display_driver/: CMakeLists.txt  display_driver.cpp
components/display_driver/include/: display_driver.hpp
components/supabase_driver/: CMakeLists.txt  supabase_driver.cpp
components/supabase_driver/certs/: supabase_root_ca.pem
components/supabase_driver/include/: supabase_driver.hpp
components/touch_bitbang/: CMakeLists.txt  Xpt2046Bitbang.cpp
components/touch_bitbang/include/: Xpt2046Bitbang.hpp
components/ui_driver/: CMakeLists.txt  roboto.c  ui_common.cpp  ui_driver.cpp
components/ui_driver/include/: ui_common.hpp  ui_common_internal.hpp  ui_driver.hpp
components/ui_driver/include/screens/: about_screen.hpp  brightness_screen.hpp  input_screen.hpp  ota_screen.hpp  password_screen.hpp  wifi_config_screen.hpp  wifi_scan_screen.hpp
components/ui_driver/screens/: about_screen.cpp  brightness_screen.cpp  input_screen.cpp  ota_screen.cpp  password_screen.cpp  wifi_config_screen.cpp  wifi_scan_screen.cpp
components/wifi_manager/: CMakeLists.txt  wifi_manager.cpp
main/: CMakeLists.txt  idf_component.yml  main.cpp
migrations/: 001_create_ratings_table.sql  README.md
tools/: README_OTA_SERVER.md  get_local_ip.sh  ota_server.py
(+1 files in other folders)
